<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<artifactId>hu.bme.mit.incqueryd.tooling</artifactId>
	<packaging>pom</packaging>
	<parent>
		<groupId>hu.bme.mit.incqueryd</groupId>
		<artifactId>hu.bme.mit.incqueryd</artifactId>
		<version>1.0.0-SNAPSHOT</version>
	</parent>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>1.6</maven.compiler.source>
		<maven.compiler.target>1.6</maven.compiler.target>
		<tycho-version>0.23.1</tycho-version>
		<xtend.version>2.9.0.beta5</xtend.version>
	</properties>
	<build>
		<plugins>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-maven-plugin</artifactId>
				<version>${tycho-version}</version>
				<extensions>true</extensions>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-packaging-plugin</artifactId>
				<version>${tycho-version}</version>
				<configuration>
					<strictBinIncludes>false</strictBinIncludes>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-surefire-plugin</artifactId>
				<version>${tycho-version}</version>
				<configuration>
					<argLine>-Xms512m -Xmx1024m -XX:MaxPermSize=512m</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>target-platform-configuration</artifactId>
				<version>${tycho-version}</version>
				<configuration>
					<target>
						<artifact>
							<groupId>hu.bme.mit.incqueryd</groupId>
							<artifactId>hu.bme.mit.incqueryd.tooling.targetplatform</artifactId>
							<version>1.0.0-SNAPSHOT</version>
						</artifact>
					</target>
					<environments>
						<environment>
							<os>win32</os>
							<ws>win32</ws>
							<arch>x86_64</arch>
						</environment>
						<environment>
							<os>macosx</os>
							<ws>cocoa</ws>
							<arch>x86_64</arch>
						</environment>
						<environment>
							<os>linux</os>
							<ws>gtk</ws>
							<arch>x86_64</arch>
						</environment>
					</environments>
				</configuration>
			</plugin>
		</plugins>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.eclipse.xtend</groupId>
					<artifactId>xtend-maven-plugin</artifactId>
					<version>${xtend.version}</version>
					<executions>
						<execution>
							<goals>
								<goal>compile</goal>
								<goal>testCompile</goal>
								<goal>xtend-install-debug-info</goal>
								<goal>xtend-test-install-debug-info</goal>
							</goals>
						</execution>
					</executions>
					<configuration>
						<outputDirectory>xtend-gen</outputDirectory>
						<testOutputDirectory>xtend-gen</testOutputDirectory>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<modules>
		<module>hu.bme.mit.incqueryd.tooling.dependencies</module>
		<module>hu.bme.mit.incqueryd.tooling.targetplatform</module>
		<module>org.eclipse.incquery.patternlanguage.util</module>
		<module>org.eclipse.incquery.patternlanguage.util.generator.recipe</module>
		<module>org.mozilla.javascript</module>
		<module>hu.bme.mit.incqueryd.rdf</module>
		<module>org.eclipse.incquery.patternlanguage.rdf.parent</module>
		<module>org.eclipse.incquery.patternlanguage.rdf.psystem</module>
		<module>org.eclipse.incquery.patternlanguage.rdf.generator.recipe</module>
		<module>hu.bme.mit.incqueryd.tooling.feature</module>
		<module>hu.bme.mit.incqueryd.tooling.update</module>
	</modules>

</project>
